whitespace issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ a:hover, .named_playlist a p:hover {
             "menu"
             "playlists"
             "profile";
-            grid-template-rows: 100px 1fr 3fr 100px;
+            grid-template-rows: 100px 1fr 2fr 100px;
             padding-bottom: 120px;
         }
             .logo {
